<resources>
    <string name="app_name">Shop Guns</string>
    <string name="not_auth">Не авторизовано</string>
    <string name="next">далі</string>
    <string name="sign_in">ввійти</string>
    <string name="sign_up">реєстрація</string>
    <string name="log_out">вийти</string>

    <string name="regist_text">Реєстація</string>

    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_name">Ім\'я</string>
    <string name="text_last_name">Прізвище</string>
    <string name="button_reg">зареєструватись</string>
    <string name="button_sign_in">ввійти</string>

    <string name="sign_in_text">Вхід</string>

    <string name="menu_titel">Виберіть вкладку</string>
    <string name="list_guns">Cписок зброї</string>
    <string name="sell_list">продана зброя</string>

    <string name="list">CПИСОК ЗБРОЇ</string>
    <string name="sell_guns_list">CПИСОК ПРОДАНОЇ ЗБРОЇ</string>

    <string name="add_gun">додати зброю</string>
    <string name="sell_gun">продати зброю</string>

    <string name="unique_number">Унікальний номер</string>
    <string name="name_guns">Назва </string>
    <string name="categories_guns">Категорія</string>
    <string name="price_guns">Ціна</string>

    <string name="done">готово</string>

    <string name="text_znachen">Додайте зброю</string>

    <string name="complite">Продати</string>
    <string name="complite1">Повернути</string>

    <string name="BackGuns">Повернути зброю</string>




</resources>