<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/bSellList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickSellList"
        android:text="@string/sell_list"
        app:layout_constraintEnd_toEndOf="@+id/bListGuns"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bListGuns"
        app:layout_constraintTop_toBottomOf="@+id/bListGuns" />

    <Button
        android:id="@+id/bListGuns"
        android:layout_width="170dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:onClick="onClickList"
        android:text="@string/list_guns"
        app:layout_constraintEnd_toEndOf="@+id/tMenuTitel"
        app:layout_constraintStart_toStartOf="@+id/tMenuTitel"
        app:layout_constraintTop_toBottomOf="@+id/tMenuTitel" />

    <TextView
        android:id="@+id/tMenuTitel"
        android:layout_width="144dp"
        android:layout_height="59dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="132dp"
        android:text="@string/menu_titel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bAddGun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickAddGun"
        android:text="@string/add_gun"
        app:layout_constraintEnd_toEndOf="@+id/bSellList"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bSellList"
        app:layout_constraintTop_toBottomOf="@+id/bSellList" />

    <Button
        android:id="@+id/bSellGun"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickGunsSellery"
        android:text="@string/sell_gun"
        app:layout_constraintEnd_toEndOf="@+id/bAddGun"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/bAddGun"
        app:layout_constraintTop_toBottomOf="@+id/bAddGun" />
</androidx.constraintlayout.widget.ConstraintLayout>