<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <EditText
        android:id="@+id/textSignInLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/text_login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textSignIn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textSignIn"
        app:layout_constraintTop_toBottomOf="@+id/textSignIn" />

    <EditText
        android:id="@+id/textSignInPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text_password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/textSignInLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textSignInLogin"
        app:layout_constraintTop_toBottomOf="@+id/textSignInLogin" />

    <Button
        android:id="@+id/bDone"
        android:layout_width="212dp"
        android:layout_height="41dp"
        android:onClick="onClickBack"
        android:text="@string/button_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSignInPass"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="214dp"
        android:layout_height="26dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="108dp"
        android:text="@string/sign_in_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>