<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="84dp"
        android:onClick="onClickSignIn"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/aboutUser"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="@+id/aboutUser"
        app:layout_constraintTop_toBottomOf="@+id/bLogOut" />

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:onClick="onClickRegist"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/bSignIn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bSignIn"
        app:layout_constraintTop_toBottomOf="@+id/bSignIn" />

    <Button
        android:id="@+id/bLogOut"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:onClick="onClickLogout"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="@+id/bNext"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/bNext"
        app:layout_constraintTop_toBottomOf="@+id/bNext" />

    <Button
        android:id="@+id/bNext"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="52dp"
        android:onClick="onClickNext"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/aboutUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/aboutUser"
        app:layout_constraintTop_toBottomOf="@+id/aboutUser" />

    <TextView
        android:id="@+id/aboutUser"
        android:layout_width="136dp"
        android:layout_height="70dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="131dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>